# optalcp-py

./: optalcp-2025.11.1-py3-none-any.whl  pyproject.toml
docs/: .gitignore
docs/source/: api.rst  conf.py  index.rst
input/: __init__.py  _async_solver.py  _base_types.py  _int_step_function.py  _parameters.py
optalcp/: .gitignore  LICENSE.md  README.md  __init__.py  _expressions.py  _int_bool_var.py  _model.py  _parameters.py  _result.py  _scheduling.py  _solution.py  _solver.py
optalcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
optalcp/input/: _async_solver.py  _bool_var.py  _constants.py  _int_var.py  _interval_var.py  _model.py  _sequence_var.py  _solution.py  _solver.py
optalcp/optalcp.egg-info/: SOURCES.txt
optalcp/tests/: test_basic.py  test_bool_var.py  test_fluent_api.py  test_issues.py  test_jupyter_compatibility.py  test_no_overlap.py  test_solver.py
tests/: test_edge_cases.py  test_int_step_function.py  test_int_var.py  test_interval_var.py  test_operators.py  test_parameters.py  test_sequence_var.py  test_solution.py  test_solver.py  test_stop_behavior.py  test_type_hints.py
