[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optalcp"
version = "2025.12.2"
description = "Python API for OptalCP constraint programming solver"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [
    {name = "CoEnzyme SAS"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# Fast JSON serialization (5-10x speedup for large models)
fast = ["orjson>=3.9.0"]

# Development dependencies
dev = [
    "setuptools>=61.0",
    "pyyaml>=6.0",
    "build>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "pyright>=1.1.0",
    "ruff>=0.8.0",
    "pydoclint>=0.5.0",
]

[project.urls]
Homepage = "https://optalcp.com"
Documentation = "https://optalcp.com/docs"
Repository = "https://github.com/ScheduleOpt/optalcp"

[tool.setuptools.packages.find]
include = ["optalcp*"]

[tool.setuptools.package-data]
optalcp = ["py.typed"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "orjson"
ignore_missing_imports = true

[tool.pyright]
reportMissingImports = "warning"
reportMissingModuleSource = false

[tool.ruff]
target-version = "py311"
respect-gitignore = false

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (undefined names, unused imports)
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify (code simplification)
    "RUF",    # Ruff-specific rules
    "C4",     # flake8-comprehensions (better list/dict comprehensions)
    "PIE",    # flake8-pie (misc. lints)
    "PYI",    # flake8-pyi (type stub issues)
    "TCH",    # flake8-type-checking (TYPE_CHECKING block optimization)
    "PERF",   # Perflint (performance issues)
]
ignore = [
    "E501",   # line too long (let formatter handle it)
    "TCH",    # type-checking imports - too noisy for generated code
    "RUF022", # __all__ not sorted - we use logical grouping
    "PIE790", # unnecessary `...` - false positive for @overload methods with docstrings
]

[tool.ruff.lint.isort]
known-first-party = ["optalcp"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]  # Don't enforce import sorting in __init__.py
"input/*.py" = ["F401"]   # Unused imports used after code generation

[tool.pydoclint]
style = "sphinx"
skip-checking-raises = true
allow-init-docstring = true
